--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Ignorar todo
+/*
+
+# No ignorar el directorio src
+!/src/
+
+# No ignorar el archivo .gitignore
+!/.gitignore
+
+############################################
+
 # Compiled class file
 *.class
 
